# spectra

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  deny.toml  spectra.dev.toml  spectra.example.toml  spectra.toml
.github/workflows/: ci.yml  deploy.yml  release.yml
frontend/: .npmrc  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.tsx
frontend/src/components/: CachingView.tsx  CookieInspector.tsx  CorsReport.tsx  CspAnalysis.tsx  ExportButtons.tsx  FingerprintView.tsx  HeadersView.tsx  RedirectChain.tsx  SecurityAudit.tsx  UrlInput.tsx
frontend/src/lib/: api.ts  history.ts  types.ts
frontend/src/styles/: global.css
specs/done/sdd/: spectra-post-review-hardening.md
specs/sdd/: spectra-post-review-hardening.md  spectra-review.md
src/: config.rs  error.rs  input.rs  lib.rs  main.rs  metrics.rs  routes.rs  scalar_docs.html  state.rs
src/inspect/: assembler.rs  caching.rs  cookies.rs  cors.rs  csp.rs  fingerprint.rs  headers.rs  mod.rs  redirects.rs  request.rs  security.rs
src/quality/: checks.rs  mod.rs  types.rs
src/security/: ip_extract.rs  mod.rs  rate_limit.rs
