[package]
name = "spectra"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "HTTP header inspection and security audit service for netray.info"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["json"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "set-header", "trace", "limit"] }
governor = "0.10"
netray-common = { version = "0.5.4", features = ["schema", "middleware", "telemetry", "otel", "cors", "server", "prometheus", "spa", "enrichment"] }

# HTTP client for outbound inspection requests
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "webpki-roots", "http2", "stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Ordered maps for header dumps
indexmap = { version = "2", features = ["serde"] }

# Configuration
config = "0.15"

# Error handling
thiserror = "2"

# Logging / tracing
tracing = "0.1"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# Embedded frontend
rust-embed = "8"
mime_guess = "2"

# OpenAPI
utoipa = { version = "5", features = ["axum_extras"] }

# Date/time
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }

# URL parsing
url = "2"

# Percent-decoding for query params
percent-encoding = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
serde_json = "1"
